--- a/elements/oe-feel-boxed-invocation-setting.html
+++ b/elements/oe-feel-boxed-invocation-setting.html
@@ -23,6 +23,9 @@
                     type: Object,
                     observer: '_dataChanged'
                 }
+            },
+            getData:function(){
+                return this.data;
             }
         })
     </script>
