Changes to oe-feel-component for SVG background.

--- a/elements/oe-feel-connector.html
+++ b/elements/oe-feel-connector.html
@@ -44,7 +44,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 border-color: var(--connector-color) var(--connector-color) transparent transparent;
                 height: 10px;
                 width:10px;
-                transform: rotate(45deg);
+                transform: scaleX(1.6) scaleY(0.6) rotate(45deg);
             }
             .line.AUTHORITY_REQUIREMENT #arrow{
                 height: 10px;
