--- a/elements/oe-feel-component.html
+++ b/elements/oe-feel-component.html
@@ -11,82 +11,101 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 position: relative;
                 display: block;
                 box-sizing: border-box;
+                --decision-table-color: #90ee90;
+                --boxed-invocation-color: #e699ff;
+                --boxed-context-color: #ffcc33;
+                --business-model-color: #33ccff;
+                --knowledge-source-color: #0099ff;
             }
 
             .component-header {
                 height: 30px;
                 padding: 0px 8px;
-                border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+                background: rgba(0, 0, 0, 0.4);
                 color: #FFF;
-            }
-
-            .component-panel.DECISION_TABLE .component-header{
-                background: #90ee90;
-            }
-
-            .component-panel.BOXED_INVOCATION .component-header{
-                background: #e699ff;
-            }
-
-            .component-panel.BOXED_CONTEXT .component-header{
-                background: #ffcc33;
-            }
-
-            .component-panel.KNOWLEDGE_SOURCE .component-header{
-                background: rgb(0, 153, 255);
-            }
-
-            .component-panel.BUSINESS_MODEL .component-header{
-                background: #33ccff;
-            }
-
-            .component-panel.INPUT .component-header{
-                background: rgb(182, 64, 64);
-            }
-
-            .component-panel.BUSINESS_MODEL:before{
-                content: "";
                 position: absolute;
-                top: -1px;
-                left: -1px;
-                width: 15px;
-                height: 15px;
-                background: linear-gradient(to bottom right,white, white 49%, #999999 50%, transparent 51%,transparent);
-            }
-            .component-panel.BUSINESS_MODEL:after{
-                content: "";
-                position: absolute;
-                right: -1px;
-                bottom: -1px;
-                width: 15px;
-                height: 15px;
-                background: linear-gradient(to top left,white, white 49%, #999999 50%, transparent 51%,transparent);
+                visibility: hidden;
+                width: 0px;
+                top: -30px;
+                right: 0px;
             }
 
+            :host:hover .component-header {
+                visibility: visible;
+                width: auto;
+            }
 
-            .component-header label{
+            .component-container label {
                 padding: 0px 8px;
             }
 
-
             .component-panel {
-                background: #FFF;
-                height: 100px;
                 min-width: 150px;
-                border: 1px solid rgba(0, 0, 0, 0.4);
-                /* box-shadow: 3px 3px 1px 1px rgba(0, 0, 0, 0.3); */
-                border-radius: 2px;
                 position: relative;
             }
-            .component-panel iron-icon{
-                --iron-icon-width:16px;
-                --iron-icon-height:16px;
+
+            .component-panel iron-icon {
+                --iron-icon-width: 16px;
+                --iron-icon-height: 16px;
             }
-            #connectorTrigger{
+
+            .component-container {
+                position: relative;
+            }
+
+            .node-name,
+            .input-name {
+                height: 32px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            #DECISION_TABLE .node-name {
+                border-bottom: 1px solid black;
+            }
+
+            .component-container #DECISION_TABLE {
+                border: 2px solid var(--decision-table-color);
+            }
+
+            .component-container #BOXED_INVOCATION {
+                border: 2px solid var(--boxed-invocation-color);
+            }
+
+            .component-container #BOXED_CONTEXT {
+                border: 2px solid var(--boxed-context-color);
+            }
+
+            #KNOWLEDGE_SOURCE{
+                height:100px;
+            }
+
+            .rect-container {
+                background: #fff;
+            }
+
+            .background {
+                position: absolute;
+                z-index: -1;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+            }
+
+            :host:hover .background{
+                filter: drop-shadow(5px 5px 1px rgba(0,0,0,0.2));
+            }
+            :host:hover .rect-container{
+                box-shadow: 5px 5px 1px rgba(0,0,0,0.2);
+            }
+
+            #connectorTrigger {
                 width: 6px;
                 height: 6px;
                 position: absolute;
-                top: 50%;
+                top: calc(50% - 5px);
                 right: -5px;
                 background: #00acff;
                 border-radius: 50%;
@@ -97,17 +116,38 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
         </style>
         <div class$="component-panel [[node.nodeType]]">
             <div class="component-header layout horizontal justified center">
-                <iron-icon icon="oe-feel-icons:[[_getNodeIcon(node.nodeType)]]"></iron-icon>
-                <label>[[node.name]]</label>
                 <iron-icon icon="icons:settings" on-tap="_launchSetting"></iron-icon>
                 <iron-icon icon="delete" on-tap="_deleteComponent"></iron-icon>
             </div>
-            <div>
-
+            <div class="component-container">
+                <iron-pages selected="[[node.nodeType]]" attr-for-selected="id">
+                    <div id="DECISION_TABLE" class="rect-container">
+                        <label class="node-name">[[node.name]]</label>
+                        <template is="dom-repeat" items="[[node.data.inputExpressionList]]">
+                            <label class="input-name">[[item]]</label>
+                        </template>
+                    </div>
+                    <div id="BOXED_INVOCATION" class="rect-container">
+                        <label class="node-name">[[node.name]]</label>
+                    </div>
+                    <div id="BOXED_CONTEXT" class="rect-container">
+                        <label class="node-name">[[node.name]]</label>
+                    </div>
+                    <div id="BUSINESS_MODEL">
+                        <label class="node-name">[[node.name]]</label>
+                        <svg class="background" viewBox="0 0 150 32" preserveAspectRatio="none">
+                            <path d="M 0 0 m 10 0 h 140 v 22 l -10 10 h -140 v -22 z" stroke-width="2" stroke="#222" fill="#33ccff" />
+                        </svg>
+                    </div>
+                    <div id="KNOWLEDGE_SOURCE" class="layout horizontal center-center">
+                        <label class="node-name">[[node.name]]</label>
+                        <svg class="background" viewBox="0 0 150 100" preserveAspectRatio="none">
+                            <path d="M 0 0 h 150 v 80 q -40 -20 -75 0 q -40 20 -75 0 z" stroke="#222" stroke-width="2" fill="#0099ff" />
+                        </svg>
+                    </div>
+                </iron-pages>
             </div>
-            <div id="connectorTrigger" on-track="_handleConnectorLaunch">
-
-            </div>
+            <div id="connectorTrigger" on-track="_handleConnectorLaunch"></div>
         </div>
     </template>
     <script>
